--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.10"
 fastapi = "^0.114.0"
 uvicorn = "^0.30.6"
+python-dotenv = "^1.0.1"
+sqlalchemy = "^2.0.35"
+asyncpg = "^0.29.0"
 
 [build-system]
 requires = ["poetry-core"]
