--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "1.3.8",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -15,9 +16,10 @@
   },
   "dependencies": {
     "apexcharts": "^3.41.0",
+    "axios": "^1.7.7",
     "flatpickr": "^4.6.13",
     "headlessui": "^0.0.0",
-    "jsvectormap": "^1.5.3",
+    "jsvectormap": "^1.6.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -39,7 +41,7 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.4.1",
-    "vite": "^4.4.7",
+    "vite": "^4.5.5",
     "webpack": "^5.88.2"
   }
 }
