--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^6.14.2",
     "react-select": "^5.8.1",
     "react-toastify": "^9.1.3",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
