--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "url": "https://tailadmin.com"
   },
   "dependencies": {
+    "@mui/x-data-grid": "^7.19.0",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.7",
     "flatpickr": "^4.6.13",
