--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = "^0.30.6"
 python-dotenv = "^1.0.1"
 sqlalchemy = "^2.0.35"
 asyncpg = "^0.29.0"
+email-validator = "^2.2.0"
 
 [build-system]
 requires = ["poetry-core"]
