--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.13.0",
+    "@faker-js/faker": "^9.0.3",
     "@mui/x-data-grid": "^7.20.0",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.7",
