--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.114.0"
+fastapi = {extras = ["standard"], version = "^0.115.2"}
 uvicorn = "^0.30.6"
 python-dotenv = "^1.0.1"
 sqlalchemy = "^2.0.35"
