--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,17 +18,21 @@
     "@emotion/styled": "^11.13.0",
     "@faker-js/faker": "^9.0.3",
     "@mui/x-data-grid": "^7.20.0",
+    "@react-google-maps/api": "^2.20.3",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.7",
     "flatpickr": "^4.6.13",
     "headlessui": "^0.0.0",
     "jsvectormap": "^1.6.0",
+    "leaflet": "^1.7.1",
+    "mapbox-gl": "^3.7.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.8.1",
     "react-toastify": "^9.1.3",
@@ -36,6 +40,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.14",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
