--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,8 @@ python-dotenv = "^1.0.1"
 sqlalchemy = "^2.0.35"
 asyncpg = "^0.29.0"
 email-validator = "^2.2.0"
+passlib = "^1.7.4"
+bcrypt = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
