--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
     "@react-google-maps/api": "^2.20.3",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "flatpickr": "^4.6.13",
     "headlessui": "^0.0.0",
+    "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.6.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.7.0",
@@ -40,6 +42,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/leaflet": "^1.9.14",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
