--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.13.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@faker-js/faker": "^9.0.3",
     "@mui/x-data-grid": "^7.20.0",
     "@react-google-maps/api": "^2.20.3",
@@ -23,9 +24,11 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "flatpickr": "^4.6.13",
+    "global": "^4.4.0",
     "headlessui": "^0.0.0",
     "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.6.0",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.7.0",
     "match-sorter": "^6.3.1",
@@ -38,8 +41,11 @@
     "react-router-dom": "^6.14.2",
     "react-select": "^5.8.1",
     "react-toastify": "^9.1.3",
+    "safe-buffer": "^5.2.1",
     "sort-by": "^0.0.2",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "util": "^0.12.5",
+    "vite-plugin-node-polyfills": "^0.22.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.7",
