Pagina principal admin y nuevos logos

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,8 @@
     "sort-by": "^0.0.2",
     "swr": "^2.2.5",
     "util": "^0.12.5",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.7",
