--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,12 @@
     "@react-google-maps/api": "^2.20.3",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.7",
+    "button": "^1.1.1",
     "dotenv": "^16.4.5",
     "flatpickr": "^4.6.13",
     "global": "^4.4.0",
     "headlessui": "^0.0.0",
+    "html2pdf.js": "^0.10.2",
     "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.6.0",
     "jwt-decode": "^4.0.0",
@@ -41,10 +43,12 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.8.1",
+    "react-to-pdf": "^1.0.1",
     "react-toastify": "^9.1.3",
     "safe-buffer": "^5.2.1",
     "sort-by": "^0.0.2",
     "swr": "^2.2.5",
+    "ui": "^0.2.4",
     "util": "^0.12.5",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vite-plugin-svgr": "^4.3.0"
