--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ asyncpg = "^0.29.0"
 email-validator = "^2.2.0"
 passlib = "^1.7.4"
 bcrypt = "^4.2.0"
+pyjwt = "^2.9.0"
 
 [build-system]
 requires = ["poetry-core"]
