--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.13.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@faker-js/faker": "^9.0.3",
+    "@headlessui/react": "^2.2.0",
     "@mui/x-data-grid": "^7.20.0",
     "@react-google-maps/api": "^2.20.3",
     "apexcharts": "^3.41.0",
