--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ email-validator = "^2.2.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 bcrypt = "^4.2.0"
 pyjwt = "^2.9.0"
+aiogram = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core"]
