--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.28.0",
     "react-select": "^5.8.1",
     "react-to-pdf": "^1.0.1",
     "react-toastify": "^9.1.3",
@@ -55,10 +55,14 @@
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/leaflet": "^1.9.14",
-    "@types/react": "^18.2.17",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "file-loader": "^6.2.0",
@@ -66,6 +70,7 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.4.1",
+    "typescript": "^5.6.3",
     "vite": "^4.5.5",
     "webpack": "^5.88.2"
   }
